--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
@@ -56,9 +61,34 @@
 	    </dependency>
 		
 		<dependency>
+	    	<groupId>org.springframework.boot</groupId>
+	    	<artifactId>spring-boot-starter-security</artifactId>
+	    </dependency>
+	    
+	    <dependency>
+	    	<groupId>org.springframework.boot</groupId>
+	    	<artifactId>spring-boot-configuration-processor</artifactId>
+	    	<optional>true</optional>
+	    </dependency>
+		
+		<!-- <dependency>
+	    	<groupId>org.postgresql</groupId>
+	    	<artifactId>postgresql</artifactId>
+	     	<version>9.4-1206-jdbc42</version>
+		</dependency> --> 
+		
+		<!-- <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-        </dependency>
+            <version>${postgresql.version}</version>
+        </dependency> -->
+        
+        <!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
+		<dependency>
+		    <groupId>postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    <version>9.4.1208-jdbc42-atlassian-hosted</version>
+		</dependency>
         
         <!-- https://mvnrepository.com/artifact/javax.persistence/persistence-api -->
 		<dependency>
@@ -66,6 +96,14 @@
 		    <artifactId>persistence-api</artifactId>
 		    <version>1.0.2</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
+		<!-- <dependency>
+		    <groupId>commons-dbcp</groupId>
+		    <artifactId>commons-dbcp</artifactId>
+		    <version>1.4</version>
+		</dependency> -->
+		
 		
 		<!-- https://mvnrepository.com/artifact/org.jboss/jandex -->
 		<!-- <dependency>
@@ -112,7 +150,7 @@
 			<version>2.0</version>
 			<scope>provided</scope>
 		</dependency> -->
-		
+
 	</dependencies>
 
 	<build>
