--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.traderfactory</groupId>
-	<artifactId>traderfactory</artifactId>
+	<groupId>com.challenge</groupId>
+	<artifactId>challenge</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>traderfactory</name>
-	<description>Trader Factory :: Pattern Detection</description>
+	<name>challenge</name>
+	<description>challenge :: interview challenge for BetVictor</description>
 
 	<parent>
 	    <groupId>org.springframework.boot</groupId>
@@ -33,12 +33,6 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 	
-		<!-- Uncoment to install Elasticsearch  -->
-		<!-- <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
-		</dependency> -->
-		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -60,35 +54,19 @@
 	        <artifactId>spring-boot-devtools</artifactId>
 	    </dependency>
 		
-		<dependency>
-	    	<groupId>org.springframework.boot</groupId>
-	    	<artifactId>spring-boot-starter-security</artifactId>
-	    </dependency>
-	    
 	    <dependency>
 	    	<groupId>org.springframework.boot</groupId>
 	    	<artifactId>spring-boot-configuration-processor</artifactId>
 	    	<optional>true</optional>
 	    </dependency>
 		
-		<!-- <dependency>
-	    	<groupId>org.postgresql</groupId>
-	    	<artifactId>postgresql</artifactId>
-	     	<version>9.4-1206-jdbc42</version>
-		</dependency> --> 
-		
-		<!-- <dependency>
+		<dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
-        </dependency> -->
+        </dependency>
         
-        <!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
-		<dependency>
-		    <groupId>postgresql</groupId>
-		    <artifactId>postgresql</artifactId>
-		    <version>9.4.1208-jdbc42-atlassian-hosted</version>
-		</dependency>
+
         
         <!-- https://mvnrepository.com/artifact/javax.persistence/persistence-api -->
 		<dependency>
@@ -97,60 +75,33 @@
 		    <version>1.0.2</version>
 		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
-		<!-- <dependency>
-		    <groupId>commons-dbcp</groupId>
-		    <artifactId>commons-dbcp</artifactId>
-		    <version>1.4</version>
-		</dependency> -->
-		
-		
-		<!-- https://mvnrepository.com/artifact/org.jboss/jandex -->
-		<!-- <dependency>
-		    <groupId>org.jboss</groupId>
-		    <artifactId>jandex</artifactId>
-		    <version>2.0.3.Final</version>
-		</dependency> -->
+		<!-- Necessary dependencies to create JSON records and use JsonSchema2Pojo -->
 
-		<!--
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.4</version>
+        </dependency>
+
+        <!-- <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-version}</version>
+        </dependency> -->
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <!-- <version>2.9.0</version> -->
 		</dependency>
-		
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jdbc</artifactId>
-		</dependency> -->
-
-		<!-- <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-neo4j</artifactId>
-		</dependency> -->
-
-		<!-- <dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<scope>runtime</scope>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <!-- <version>2.9.0</version> -->
 		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+        
 		
-		<dependency>
-	        <groupId>net.java.dev.jna</groupId>
-	        <artifactId>jna</artifactId>
-	    </dependency> -->
-	    
-	    <!-- <dependency>
-			<groupId>javax.portlet</groupId>
-			<artifactId>portlet-api</artifactId>
-			<version>2.0</version>
-			<scope>provided</scope>
-		</dependency> -->
-
 	</dependencies>
 
 	<build>
