--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,12 @@
 #Datasource for Primary PostgreSql database
-spring.datasource.url=jdbc:postgresql://localhost:5432/traderfactorydb
+spring.datasource.url=jdbc:postgresql://localhost:5432/challengedb
 spring.datasource.username=postgres
 spring.datasource.password=Qwerty1234
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #Properties
-spring.jpa.properties.hibernate.default_schema=commonschema
+spring.jpa.properties.hibernate.default_schema=challengeschema
 spring.jpa.show-sql=true
 
 
 
-
-
-
-
-
-
-
-######GARBAGE##############
-#Datasource for Primary PostgreSql database
-#spring.datasource.driverClassName=PostgreSQL JDBC Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/paybox 
-#spring.datasource.username=postgres 
-#spring.datasource.password=Qwerty1234
-
-#Elasticsearch database credentials
